# NMPC_baseline_vs_triggering_based_method

./: CMakeLists.txt  README.md
acado_code_generation/: CMakeLists.txt
acado_code_generation/src/: formulation_N15.cpp  formulation_N30.cpp
data/: Baseline.ipynb  PPT.ipynb  Triggering-only_time_cond.ipynb  Triggering-until_N.ipynb  Triggering.ipynb  comp.ipynb
data/.ipynb_checkpoints/: Baseline-checkpoint.ipynb  PPT-checkpoint.ipynb  Triggering-checkpoint.ipynb
data/acados_tool/: bigger_track.txt  plotFcn.py  readDataFcn.py  time2spatial.py
include/: LV_traj.h  light_acado.h  system_config.h  track.h  types.h
param/: track2.json
result/baseline/track1/N15/: traj_actual.txt  traj_time.txt  traj_whole.txt
result/baseline/track1/N30/: traj_actual.txt  traj_time.txt  traj_whole.txt
result/baseline/track2/N15/: traj_actual.txt  traj_time.txt  traj_whole.txt
result/baseline/track2/N30/: traj_actual.txt  traj_time.txt  traj_whole.txt
result/triggering-only_time_cond/track1/N30/: traj_actual.txt  traj_time.txt  traj_whole.txt  trigger_stat.txt
result/triggering-only_time_cond/track2/N30/: traj_actual.txt  traj_time.txt  traj_whole.txt  trigger_stat.txt
result/triggering-until_N/track1/N30/: traj_actual.txt  traj_time.txt  traj_whole.txt  trigger_stat.txt
result/triggering-until_N/track2/N30/: traj_actual.txt  traj_time.txt  traj_whole.txt  trigger_stat.txt
result/triggering/track1/N30/: traj_actual.txt  traj_time.txt  traj_whole.txt  trigger_stat.txt
result/triggering/track2/N30/: traj_actual.txt  traj_time.txt  traj_whole.txt  trigger_stat.txt
src/: main-track1-baseline.cpp  main-track1-triggering-only_time_cond.cpp  main-track1-triggering-until_N.cpp  main-track1-triggering.cpp  main-track2-baseline.cpp  main-track2-triggering-only_time_cond.cpp  main-track2-triggering-until_N.cpp  main-track2-triggering.cpp  main.cpp  track1.cpp  track2.cpp
src/acado_generated_code_N15/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
src/acado_generated_code_N30/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
